# set_environment_for_simulation

./: Dockerfile  FindTinyXML2.cmake  README.md  compose.yaml  entrypoint.sh  setup.sh
estudos_ws/src/: Makefile
estudos_ws/src/dependencies/bringup/: CMakeLists.txt  CMakeLists.txt.txt  package.xml  package.xml.txt  template.launch.py
estudos_ws/src/dependencies/bringup/launch/: my_robot.launch.py
estudos_ws/src/dependencies/description/: CMakeLists.txt  package.xml
estudos_ws/src/dependencies/description/launch/: display.launch.py
estudos_ws/src/dependencies/interfaces/: CMakeLists.txt  package.xml  package.xml.txt
estudos_ws/src/dependencies/simulation/: entrypoint.sh  setup.sh
estudos_ws/src/dependencies/templates/: mininum_node.py
